force-app/main/default/objects/Webhook_Event__c/Webhook_Event__c.object-meta.xml
<CustomObject>
    <description>Durable record of one inbound webhook delivery. The guest endpoint writes the row and stops; all processing happens in a separate transaction via platform event, so this row is the handoff and the audit trail. Sharing is Private because the site guest user creates these - Salesforce forces guest record access to Private, and a public model would block the guest grant.</description>
    <label>Webhook Event</label>
    <nameField>
        <displayFormat>WH-{00000}</displayFormat>
        <label>Webhook Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Webhook Events</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>