force-app/main/default/objects/Webhook_Event__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Why the event failed, or why it was ignored. GUEST-SENSITIVE: carries exception types and Apex class names.</description>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>