force-app/main/default/objects/Webhook_Event__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <description>Event name as the sender labelled it, e.g. jira:issue_updated. Free text rather than a picklist: an unrecognised event type must be storable, not rejected.</description>
    <label>Event Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>