force-app/main/default/objects/Webhook_Event__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>Namespaced id of the issue the event concerns, e.g. jira:10039 - the same form Work_Item__c.External_Id__c uses, so it is directly the upsert key. Not marked unique or External ID here: several events legitimately concern one issue.</description>
    <inlineHelpText>Namespaced remote id, e.g. jira:10039.</inlineHelpText>
    <label>External Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>