force-app/main/default/objects/Webhook_Event__c/fields/Ignore_Reason__c.field-meta.xml
<CustomField>
    <fullName>Ignore_Reason__c</fullName>
    <description>Why a delivery reached Ignored, as a value rather than as prose. Ignored conflates two different outcomes: Superseded means a newer delivery for the same external id won inside the batch, and the winner carries the whole story. Not Applicable means the adapter had nothing to say about the resource - an Asana story event, for instance - so no retry would ever produce a change. Retention rules read this field; before it existed the only way to tell them apart was to string-match Error_Message__c, which breaks silently the day somebody rewords a message. Null on every row that is not Ignored.</description>
    <label>Ignore Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Superseded</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>