force-app/main/default/objects/Webhook_Event__c/fields/Raw_Payload__c.field-meta.xml
<CustomField>
    <fullName>Raw_Payload__c</fullName>
    <description>Body exactly as received. Stored verbatim because the HMAC is computed over the raw bytes - reserialising changes whitespace and key order and invalidates the signature. GUEST-SENSITIVE: carries reporter and assignee PII from Jira. STORAGE: written for rejected requests too, so an unauthenticated caller can grow this object; revisit before exposing the endpoint publicly.</description>
    <label>Raw Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>