force-app/main/default/objects/Webhook_Event__c/fields/Received_At__c.field-meta.xml
<CustomField>
    <fullName>Received_At__c</fullName>
    <description>When Salesforce accepted the delivery. Distinct from the payload&apos;s own update timestamp, which is what drives ordering - see Work_Item__c.Remote_Last_Modified__c.</description>
    <label>Received At</label>
    <type>DateTime</type>
</CustomField>