force-app/main/default/objects/Webhook_Event__c/fields/Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>Retry_Count__c</fullName>
    <description>Reserved for a retry policy, which is out of scope for this build. Nothing writes it yet, so expect zero or null on every row until that policy exists.</description>
    <label>Retry Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>