force-app/main/default/objects/Webhook_Event__c/fields/Signature_Valid__c.field-meta.xml
<CustomField>
    <fullName>Signature_Valid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the HMAC over the raw body matched. Defaults false so a row that somehow skips validation reads as untrusted rather than trusted.</description>
    <label>Signature Valid</label>
    <type>Checkbox</type>
</CustomField>