force-app/main/default/objects/Webhook_Event__c/fields/Source_System__c.field-meta.xml
<CustomField>
    <fullName>Source_System__c</fullName>
    <description>System that sent the webhook. Backed by the same External_System global value set as Project__c and Work_Item__c, so the vocabulary cannot drift between inbound and outbound.</description>
    <label>Source System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>External_System</valueSetName>
    </valueSet>
</CustomField>